k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-plat
spec:
  selector:
    app: python-plat
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
