k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-plat
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "platform-plat.app.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-plat
                port:
                  number: 8080
